# cborg

./: .gitignore  .travis.yml  AUTHORS.txt  LICENSE  LICENSE.txt  README.md  appveyor.yml  binary-serialise-cbor.cabal  cabal.haskell-ci  cabal.project  cborg.cabal  hie.yaml  nix-shell  stack.yaml
.github/: CONTRIBUTING.md
.github/workflows/: alpine-x86.yml  haskell-ci.yml  macwin.yml  other.yml
.travis/: dragon-bureaucrat.sh  prep-llvm.sh
Data/Binary/Serialise/: CBOR.hs
Data/Binary/Serialise/CBOR/: ByteOrder.hs  Class.hs  Decoding.hs  Encoding.hs  FlatTerm.hs  FlatTerm.hs-boot  IO.hs  Pretty.hs  Properties.hs  Read.hs  Term.hs  Tutorial.hs  Write.hs
bench/: Instances.hs  Macro.hs  Main.hs  Micro.hs  Misc.hs
bench/Instances/: Time.hs  Vector.hs
bench/Macro/: CBOR.hs  DeepSeq.hs  Load.hs  MemSize.hs  PkgAesonGeneric.hs  PkgAesonTH.hs  PkgCereal.hs  PkgMsgpack.hs  ReadShow.hs  Types.hs
bench/Micro/: PkgAesonTH.hs  PkgBinary.hs  PkgCereal.hs  ReadShow.hs
bench/Real/: CBOR.hs  DeepSeq.hs  Load.hs  MemSize.hs  PkgAesonGeneric.hs  PkgAesonTH.hs  PkgBinary.hs  PkgCereal.hs  PkgMsgpack.hs  ReadShow.hs  Types.hs
bench/Tree/: CBOR.hs  DeepSeq.hs  Load.hs  MemSize.hs  PkgAesonGeneric.hs  PkgAesonTH.hs  PkgBinary.hs  PkgCereal.hs  PkgMsgpack.hs  ReadShow.hs  Types.hs
bench/instances/: Main.hs
bench/instances/Instances/: Integer.hs  Time.hs  Vector.hs
bench/micro/: Main.hs  Micro.hs  SimpleVersus.hs
bench/micro/Micro/: CBOR.hs  Load.hs  PkgAesonGeneric.hs  PkgMsgpack.hs  PkgStore.hs
bench/versus/: Macro.hs  Main.hs  Micro.hs  Mini.hs  Utils.hs
bench/versus/Macro/: CBOR.hs  DeepSeq.hs  Load.hs  PkgCereal.hs  PkgStore.hs
bench/versus/Micro/: MemSize.hs  Types.hs
binary-serialise-cbor/: ChangeLog.md  binary-serialise-cbor.cabal
binary-serialise-cbor/src/Data/Binary/Serialise/: CBOR.hs
binary-serialise-cbor/src/Data/Binary/Serialise/CBOR/: Class.hs  Decoding.hs  Encoding.hs  FlatTerm.hs  IO.hs  Magic.hs  Pretty.hs  Properties.hs  Read.hs  Term.hs  Write.hs
cbits/: cbor.h  half.c
cbor-tool/: ChangeLog.md  Main.hs  cbor-tool.cabal
cborg/: ChangeLog.md  cborg.cabal
cborg-json/: ChangeLog.md  cborg-json.cabal
cborg-json/bench/: Main.hs
cborg-json/src/Codec/CBOR/: JSON.hs
cborg-json/tests/: Main.hs
cborg/src/Codec/: CBOR.hs
cborg/src/Codec/CBOR/: ByteArray.hs  Decoding.hs  Encoding.hs  Encoding.hs-boot  FlatTerm.hs  FlatTerm.hs-boot  Magic.hs  Pretty.hs  Read.hs  Term.hs  Write.hs
cborg/src/Codec/CBOR/ByteArray/: Internal.hs  Sliced.hs
cborg/src/cbits/: cbor.h
cborg/tests/: Main.hs
cborg/tests/Tests/: ATerm.hs  Boundary.hs  ByteOffset.hs  CBOR.hs  Canonical.hs  FlatTerm.hs  GetInputSpan.hs  PreEncoded.hs  Properties.hs  Reference.hs  Regress.hs  Term.hs  UTF8.hs  UnitTests.hs  Util.hs
cborg/tests/Tests/Reference/: Generators.hs  Implementation.hs  TestVectors.hs
cborg/tests/Tests/Regress/: FlatTerm.hs  Issue160.hs  Issue162.hs
cborg/tests/test-vectors/: appendix_a.json
demos/: Aeson.hs  Dump.hs  Simple.hs
examples/: Aeson.hs
scripts/: dragon-bureaucrat.sh  prep-llvm.sh  travis-hacks.sh
serialise/: ChangeLog.md  README.md  serialise.cabal
serialise/bench/instances/: Main.hs
serialise/bench/instances/Instances/: Float.hs  Integer.hs  Time.hs  Vector.hs
serialise/bench/micro/: Main.hs  Micro.hs  SimpleVersus.hs
serialise/bench/micro/Micro/: CBOR.hs  DeepSeq.hs  PkgAesonTH.hs  PkgCereal.hs  PkgStore.hs
serialise/bench/versus/: Macro.hs  Utils.hs
serialise/bench/versus/Macro/: CBOR.hs  DeepSeq.hs  Load.hs  PkgAesonTH.hs  PkgBinary.hs  PkgCereal.hs  PkgStore.hs
serialise/src/Codec/: Serialise.hs
serialise/src/Codec/Serialise/: Class.hs  Decoding.hs  Encoding.hs  IO.hs  Properties.hs  Tutorial.hs
serialise/src/Codec/Serialise/Internal/: GeneralisedUTF8.hs
serialise/tests/: Main.hs
serialise/tests/Tests/: Boundary.hs  CBOR.hs  Deriving.hs  GeneralisedUTF8.hs  IO.hs  Negative.hs  Orphanage.hs  Reference.hs  Regress.hs  Serialise.hs  UTF8.hs  Util.hs
serialise/tests/Tests/Reference/: Implementation.hs
serialise/tests/Tests/Regress/: Issue106.hs  Issue13.hs  Issue135.hs  Issue160.hs  Issue162.hs  Issue67.hs  Issue80.hs
serialise/tests/Tests/Serialise/: Canonical.hs
serialise/tests/test-vectors/deriving/: a-newtype
src/Codec/: CBOR.hs
src/Codec/CBOR/: Class.hs  IO.hs  Magic.hs  Properties.hs  Read.hs  Term.hs  Tutorial.hs  Write.hs
src/Data/Binary/Serialise/: CBOR.hs
src/Data/Binary/Serialise/CBOR/: ByteOrder.hs  Class.hs  Decoding.hs  Encoding.hs  Encoding.hs-boot  FlatTerm.hs  IO.hs  Magic.hs  Pretty.hs  Properties.hs  Read.hs  Term.hs  Tutorial.hs  Write.hs
src/Serialise/: Cborg.hs
src/Serialise/Cborg/: Class.hs  Decoding.hs  Encoding.hs  Encoding.hs-boot  FlatTerm.hs  FlatTerm.hs-boot  IO.hs  Magic.hs  Pretty.hs  Properties.hs  Read.hs  Term.hs  Tutorial.hs  Write.hs
src/Serialise/Cborg/Encoding/: Types.hs
src/Serialise/Cborg/FlatTerm/: Types.hs
src/cbits/: half.c
src/tool/: Dump.hs  Main.hs
tests/: CBORTests.hs  Liquid.hs  Main.hs  ReferenceImpl.hs  ReferenceTests.hs  SafeTests.hs
tests/Tests/: CBOR.hs  Deriving.hs  FlatTerm.hs  IO.hs  Negative.hs  Orphanage.hs  Reference.hs  Regress.hs  Safe.hs  Serialise.hs
tests/Tests/Reference/: Implementation.hs
tests/Tests/Regress/: FlatTerm.hs  Issue106.hs  Issue13.hs  Issue67.hs  Issue80.hs
tests/test-vectors/deriving/: aRecord
