name:                binary-serialise-cbor
version:             0.1.1.0
synopsis:            Yet Another Binary Serialisation Library
license:             BSD3
license-file:        LICENSE.txt
author:              Duncan Coutts
maintainer:          duncan@community.haskell.org
copyright:           2015 Duncan Coutts,
                     2015 Well-Typed LLP,
                     2015 IRIS Connect Ltd
category:            Codec
build-type:          Simple
cabal-version:       >= 1.10

description:
  This package provides pure, efficient serialization of Haskell
  values directly into @ByteString@s for storage or transmission
  purposes. By providing a set of type class instances, you can
  also serialise any custom data type you have as well.
  .
  The underlying binary format used is the 'Concise Binary Object
  Representation', or CBOR, specified in RFC 7049. As a result,
  serialised Haskell values have implicit structure outside of the
  Haskell program itself, meaning they can be inspected or analyzed
  with custom tools.

extra-source-files:
  tests/test-vectors/appendix_a.json
  tests/test-vectors/README.md
  cbits/cbor.h

source-repository head
  type: git
  location: https://github.com/well-typed/binary-serialise-cbor.git


--------------------------------------------------------------------------------
-- Flags

flag newtime15
  default: False
  manual: False
  description: Use the new time 1.5 library

flag examples
  default: False
  manual: True
  description: Build example programs

--------------------------------------------------------------------------------
-- Library

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  c-sources:         cbits/half.c
  include-dirs:      cbits

  exposed-modules:
    Data.Binary.Serialise.CBOR
    Data.Binary.Serialise.CBOR.ByteOrder
    Data.Binary.Serialise.CBOR.Class
    Data.Binary.Serialise.CBOR.Decoding
    Data.Binary.Serialise.CBOR.Encoding
    Data.Binary.Serialise.CBOR.FlatTerm
    Data.Binary.Serialise.CBOR.IO
    Data.Binary.Serialise.CBOR.Properties
    Data.Binary.Serialise.CBOR.Read
    Data.Binary.Serialise.CBOR.Write
    Data.Binary.Serialise.CBOR.Term
    Data.Binary.Serialise.CBOR.Tutorial

  other-extensions:
    CPP, ForeignFunctionInterface, MagicHash,
    UnboxedTuples, BangPatterns, DeriveDataTypeable,
    RankNTypes

  build-depends:
    array                   >= 0.4     && < 0.6,
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    ghc-prim                >= 0.3     && < 0.6,
    text                    >= 1.1     && < 1.3,
    containers              >= 0.5     && < 0.6,
    unordered-containers    >= 0.2     && < 0.3,
    hashable                >= 1.2     && < 2.0,
    vector

  if flag(newtime15)
    build-depends:
      time                  >= 1.5     && < 1.7
  else
    build-depends:
      time                  >= 1.4     && < 1.5,
      old-locale

--------------------------------------------------------------------------------
-- Demo programs

executable demo-aeson
  hs-source-dirs:    demos
  main-is:           Aeson.hs

  default-language:  Haskell2010
  ghc-options:       -Wall

  other-extensions:
    CPP, BangPatterns

  if flag(examples)
    buildable: True
  else
    buildable: False

  build-depends:
    aeson                   >= 0.7     && < 0.12,
    aeson-pretty            >= 0.7     && < 0.8,
    base                    >= 4.6     && < 5.0,
    bytestring              >= 0.10.4  && < 0.11,
    filepath                >= 1.0     && < 1.5,
    ghc-prim                >= 0.3     && < 0.6,
    scientific              >= 0.3     && < 0.4,
    text                    >= 1.1     && < 1.3,
    unordered-containers    >= 0.2     && < 0.3,
    vector                  >= 0.10    && < 0.12,
    binary-serialise-cbor

executable demo-dump-cbor
  hs-source-dirs:    demos
  main-is:           Dump.hs

  default-language:  Haskell2010
  ghc-options:       -Wall

  other-extensions:
    CPP, BangPatterns

  if flag(examples)
    buildable: True
  else
    buildable: False

  build-depends:
    base                    >= 4.6     && < 5.0,
    bytestring              >= 0.10.4  && < 0.11,
    filepath                >= 1.0     && < 1.5,
    ghc-prim                >= 0.3     && < 0.6,
    binary-serialise-cbor

--------------------------------------------------------------------------------
-- Tests

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans

  other-modules:
    Tests.CBOR
    Tests.IO
    Tests.Negative
    Tests.Serialise
    Tests.Regress
    Tests.Regress.Issue13
    Tests.Regress.FlatTerm
    Tests.Reference
    Tests.Reference.Implementation

  build-depends:
    array                   >= 0.4     && < 0.6,
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    directory               >= 1.0     && < 1.3,
    filepath                >= 1.0     && < 1.5,
    ghc-prim                >= 0.3     && < 0.6,
    text                    >= 1.1     && < 1.3,
    containers              >= 0.5     && < 0.6,
    unordered-containers    >= 0.2     && < 0.3,
    hashable                >= 1.2     && < 2.0,
    binary-serialise-cbor,

    aeson                   >= 0.7     && < 0.12,
    base64-bytestring       >= 1.0     && < 1.1,
    base16-bytestring       >= 0.1     && < 0.2,
    deepseq                 >= 1.0     && < 1.5,
    half                    >= 0.2     && < 0.3,
  --msgpack,
    QuickCheck              >= 2.0     && < 2.9,
    scientific              >= 0.3     && < 0.4,
    tasty                   >= 0.11    && < 0.12,
    tasty-hunit             >= 0.9     && < 0.10,
    tasty-quickcheck        >= 0.8     && < 0.9,
    quickcheck-instances    >= 0.3     && < 0.4,
    vector                  >= 0.10    && < 0.12

--------------------------------------------------------------------------------
-- Benchmarks

benchmark instances
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench/instances
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:
    -Wall -rtsopts -fno-cse -fno-ignore-asserts -fno-warn-orphans

  other-modules:
    Instances.Vector

  build-depends:
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    vector                  >= 0.10    && < 1.0,
    binary-serialise-cbor,

    deepseq                 >= 1.0     && < 1.5,
    criterion               >= 1.0     && < 1.2

  if flag(newtime15)
    build-depends:
      time                  >= 1.5     && < 1.7
  else
    build-depends:
      time                  >= 1.4     && < 1.5,
      old-locale

benchmark micro
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench/micro
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:
    -Wall -rtsopts -fno-cse -fno-ignore-asserts -fno-warn-orphans

  other-modules:
    Micro
    Micro.Types
    Micro.Load
    Micro.DeepSeq
    Micro.MemSize
    Micro.ReadShow
    Micro.PkgAesonGeneric
    Micro.PkgAesonTH
    Micro.PkgBinary
    Micro.PkgCereal
  --Micro.PkgMsgpack
    Micro.CBOR

  build-depends:
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    ghc-prim                >= 0.3     && < 0.6,
    vector                  >= 0.10    && < 1.0,
    binary-serialise-cbor,

    aeson                   >= 0.7     && < 0.12,
    deepseq                 >= 1.0     && < 1.5,
    criterion               >= 1.0     && < 1.2,
    cereal                  >= 0.4     && < 0.6

benchmark vs-other-libs
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench/versus
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:
    -Wall -rtsopts -fno-cse -fno-ignore-asserts -fno-warn-orphans

  other-modules:
    Utils

    -- Suite #1
    Mini

    -- Suite #2
    Macro
    Macro.Types
    Macro.Load
    Macro.DeepSeq
    Macro.MemSize
    Macro.ReadShow
    Macro.PkgAesonGeneric
    Macro.PkgAesonTH
    Macro.PkgBinary
    Macro.PkgCereal
  --Macro.PkgMsgpack
    Macro.CBOR

  build-depends:
    array                   >= 0.4     && < 0.6,
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    directory               >= 1.0     && < 1.3,
    ghc-prim                >= 0.3     && < 0.6,
    text                    >= 1.1     && < 1.3,
    vector                  >= 0.10    && < 1.0,
    binary-serialise-cbor,

    filepath                >= 1.0     && < 1.5,
    containers              >= 0.5     && < 0.6,
    deepseq                 >= 1.0     && < 1.5,
    aeson                   >= 0.7     && < 0.12,
    cereal                  >= 0.4     && < 0.6,
  --msgpack                 >= 0.7     && < 0.8,
  --blaze-builder,
  --attoparsec,
    half                    >= 0.2     && < 0.3,
    tar                     >= 0.4     && < 0.6,
    zlib                    >= 0.5     && < 0.7,
    pretty                  >= 1.0     && < 1.2,
    criterion               >= 1.0     && < 1.2

  if flag(newtime15)
    build-depends:
      time                  >= 1.5     && < 1.7
  else
    build-depends:
      time                  >= 1.4     && < 1.5,
      old-locale
