name:                binary-serialise-cbor
version:             0.1.1.0
synopsis:            Yet Another Binary Serialisation Library
license:             BSD3
license-file:        LICENSE.txt
author:              Duncan Coutts
maintainer:          duncan@community.haskell.org
copyright:           2015-2017 Duncan Coutts,
                     2015-2017 Well-Typed LLP,
                     2015 IRIS Connect Ltd
category:            Codec
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

description:
  This package provides pure, efficient serialization of Haskell
  values directly into @ByteString@s for storage or transmission
  purposes. By providing a set of type class instances, you can
  also serialise any custom data type you have as well.
  .
  The underlying binary format used is the 'Concise Binary Object
  Representation', or CBOR, specified in RFC 7049. As a result,
  serialised Haskell values have implicit structure outside of the
  Haskell program itself, meaning they can be inspected or analyzed
  with custom tools.

extra-source-files:
  tests/test-vectors/appendix_a.json
  tests/test-vectors/README.md
  src/cbits/cbor.h

source-repository head
  type: git
  location: https://github.com/well-typed/binary-serialise-cbor.git

--------------------------------------------------------------------------------
-- Flags

flag newtime15
  default: False
  manual: False
  description: Use the new time 1.5 library

flag cbor-tool
  default: True
  manual: False
  description: Build CBOR tool program

flag optimize-gmp
  default: True
  manual: False
  description: Use optimized code paths for integer-gmp

flag hpc
  default: False
  manual: True
  description: Enable HPC for libraries, tools, and tests.

--------------------------------------------------------------------------------
-- Library

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  include-dirs:      src/cbits
  hs-source-dirs:    src

  if flag(hpc)
    ghc-options:     -fhpc

  exposed-modules:
    Data.Binary.Serialise.CBOR
    Data.Binary.Serialise.CBOR.Class
    Data.Binary.Serialise.CBOR.Decoding
    Data.Binary.Serialise.CBOR.Encoding
    Data.Binary.Serialise.CBOR.FlatTerm
    Data.Binary.Serialise.CBOR.IO
    Data.Binary.Serialise.CBOR.Magic
    Data.Binary.Serialise.CBOR.Pretty
    Data.Binary.Serialise.CBOR.Properties
    Data.Binary.Serialise.CBOR.Read
    Data.Binary.Serialise.CBOR.Write
    Data.Binary.Serialise.CBOR.Term
    Data.Binary.Serialise.CBOR.Tutorial

  other-extensions:
    CPP, ForeignFunctionInterface, MagicHash,
    UnboxedTuples, BangPatterns, DeriveDataTypeable,
    RankNTypes

  build-depends:
    array                   >= 0.4     && < 0.6,
    base                    >= 4.6     && < 5.0,
    bytestring              >= 0.10.4  && < 0.11,
    containers              >= 0.5     && < 0.6,
    ghc-prim                >= 0.3     && < 0.6,
    half                    >= 0.2.2.3 && < 0.3,
    hashable                >= 1.2     && < 2.0,
    primitive               >= 0.5     && < 0.7,
    text                    >= 1.1     && < 1.3,
    unordered-containers    >= 0.2     && < 0.3,
    vector                  >= 0.10    && < 0.13

  if flag(optimize-gmp)
    cpp-options:            -DFLAG_OPTIMIZE_GMP
    build-depends:
      integer-gmp

  if flag(newtime15)
    build-depends:
      time                  >= 1.5     && < 1.9
  else
    build-depends:
      time                  >= 1.4     && < 1.5,
      old-locale

--------------------------------------------------------------------------------
-- CBOR tool

executable cbor-tool
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src/tool
  main-is:           Main.hs

  other-extensions:
    CPP, BangPatterns

  if flag(cbor-tool)
    buildable: True
  else
    buildable: False

  if flag(hpc)
    ghc-options:     -fhpc

  build-depends:
    aeson                   >= 0.7     && < 1.1,
    aeson-pretty            >= 0.7     && < 0.9,
    base                    >= 4.6     && < 5.0,
    bytestring              >= 0.10.4  && < 0.11,
    filepath                >= 1.0     && < 1.5,
    ghc-prim                >= 0.3     && < 0.6,
    scientific              >= 0.3     && < 0.4,
    text                    >= 1.1     && < 1.3,
    unordered-containers    >= 0.2     && < 0.3,
    vector                  >= 0.10    && < 0.13,
    binary-serialise-cbor

  if flag(newtime15)
    build-depends:
      time                  >= 1.5     && < 1.9
  else
    build-depends:
      time                  >= 1.4     && < 1.5,
      old-locale

--------------------------------------------------------------------------------
-- Tests

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:
    -Wall -fno-warn-orphans -threaded -rtsopts "-with-rtsopts=-N"

  if flag(hpc)
    ghc-options:     -fhpc

  other-modules:
    Tests.CBOR
    Tests.IO
    Tests.Negative
    Tests.Orphanage
    Tests.Serialise
    Tests.Regress
    Tests.Regress.Issue13
    Tests.Regress.Issue67
    Tests.Regress.Issue80
    Tests.Regress.Issue106
    Tests.Regress.FlatTerm
    Tests.Reference
    Tests.Reference.Implementation
    Tests.Deriving

  build-depends:
    array                   >= 0.4     && < 0.6,
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    directory               >= 1.0     && < 1.4,
    filepath                >= 1.0     && < 1.5,
    ghc-prim                >= 0.3     && < 0.6,
    text                    >= 1.1     && < 1.3,
    containers              >= 0.5     && < 0.6,
    unordered-containers    >= 0.2     && < 0.3,
    hashable                >= 1.2     && < 2.0,
    binary-serialise-cbor,

    aeson                   >= 0.7     && < 1.1,
    base64-bytestring       >= 1.0     && < 1.1,
    base16-bytestring       >= 0.1     && < 0.2,
    deepseq                 >= 1.0     && < 1.5,
    half                    >= 0.2.2.3 && < 0.3,
    QuickCheck              >= 2.9     && < 2.10,
    scientific              >= 0.3     && < 0.4,
    tasty                   >= 0.11    && < 0.12,
    tasty-hunit             >= 0.9     && < 0.10,
    tasty-quickcheck        >= 0.8     && < 0.9,
    quickcheck-instances    >= 0.3.12  && < 0.4,
    vector                  >= 0.10    && < 0.13

  if flag(newtime15)
    build-depends:
      time                  >= 1.5     && < 1.9
  else
    build-depends:
      time                  >= 1.4     && < 1.5,
      old-locale

--------------------------------------------------------------------------------
-- Benchmarks

benchmark instances
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench/instances
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:
    -Wall -rtsopts -fno-cse -fno-ignore-asserts -fno-warn-orphans

  other-modules:
    Instances.Integer
    Instances.Vector
    Instances.Time

  build-depends:
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    vector                  >= 0.10    && < 0.13,
    binary-serialise-cbor,

    deepseq                 >= 1.0     && < 1.5,
    criterion               >= 1.0     && < 1.2

  if flag(newtime15)
    build-depends:
      time                  >= 1.5     && < 1.9
  else
    build-depends:
      time                  >= 1.4     && < 1.5,
      old-locale

benchmark micro
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench/micro
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:
    -Wall -rtsopts -fno-cse -fno-ignore-asserts -fno-warn-orphans

  other-modules:
    Micro
    Micro.Types
    Micro.Load
    Micro.DeepSeq
    Micro.MemSize
    Micro.ReadShow
    Micro.PkgAesonGeneric
    Micro.PkgAesonTH
    Micro.PkgBinary
    Micro.PkgCereal
    Micro.PkgStore
    Micro.CBOR

    SimpleVersus

  build-depends:
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    ghc-prim                >= 0.3     && < 0.6,
    vector                  >= 0.10    && < 0.13,
    binary-serialise-cbor,

    aeson                   >= 0.7     && < 1.1,
    deepseq                 >= 1.0     && < 1.5,
    criterion               >= 1.0     && < 1.2,
    cereal                  >= 0.5.2.0 && < 0.6,
    cereal-vector           >= 0.2     && < 0.3,
    store                   >= 0.4     && < 0.5

benchmark versus
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench/versus
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:
    -Wall -rtsopts -fno-cse -fno-ignore-asserts -fno-warn-orphans

  other-modules:
    Utils

    -- Suite #1
    Mini

    -- Suite #2
    Macro
    Macro.Types
    Macro.Load
    Macro.DeepSeq
    Macro.MemSize
    Macro.ReadShow
    Macro.PkgAesonGeneric
    Macro.PkgAesonTH
    Macro.PkgBinary
    Macro.PkgCereal
    Macro.PkgStore
    Macro.CBOR

  build-depends:
    array                   >= 0.4     && < 0.6,
    base                    >= 4.6     && < 5.0,
    binary                  >= 0.7     && < 0.9,
    bytestring              >= 0.10.4  && < 0.11,
    directory               >= 1.0     && < 1.4,
    ghc-prim                >= 0.3     && < 0.6,
    text                    >= 1.1     && < 1.3,
    vector                  >= 0.10    && < 0.13,
    binary-serialise-cbor,

    filepath                >= 1.0     && < 1.5,
    containers              >= 0.5     && < 0.6,
    deepseq                 >= 1.0     && < 1.5,
    aeson                   >= 0.7     && < 1.1,
    cereal                  >= 0.5.2.0 && < 0.6,
    half                    >= 0.2.2.3 && < 0.3,
    tar                     >= 0.4     && < 0.6,
    zlib                    >= 0.5     && < 0.7,
    pretty                  >= 1.0     && < 1.2,
    criterion               >= 1.0     && < 1.2,
    store                   >= 0.4     && < 0.5

  if flag(newtime15)
    build-depends:
      time                  >= 1.5     && < 1.9
  else
    build-depends:
      time                  >= 1.4     && < 1.5,
      old-locale
