name:                binary-serialise-cbor
version:             0.2.1.0
synopsis:            Yet Another Binary Serialisation Library (compatibility shim)
license:             BSD3
license-file:        LICENSE.txt
author:              Duncan Coutts
maintainer:          duncan@community.haskell.org, ben@smart-cactus.org
bug-reports:         https://github.com/well-typed/cborg/issues
copyright:           2015-2017 Duncan Coutts,
                     2015-2017 Well-Typed LLP,
                     2015 IRIS Connect Ltd
category:            Codec
build-type:          Simple
cabal-version:       1.22
tested-with:
  GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1

description:
  This package is a shim around @cborg@, exposing an interface compatible with
  the previous @binary-serialise-cbor@.

source-repository head
  type: git
  location: https://github.com/well-typed/cborg.git

library
  default-language:  Haskell2010
  hs-source-dirs:      src
  reexported-modules:
    Codec.Serialise            as Data.Binary.Serialise.CBOR,
    Codec.Serialise.Class      as Data.Binary.Serialise.CBOR.Class,
    Codec.Serialise.Decoding   as Data.Binary.Serialise.CBOR.Decoding,
    Codec.Serialise.Encoding   as Data.Binary.Serialise.CBOR.Encoding,
    Codec.CBOR.FlatTerm        as Data.Binary.Serialise.CBOR.FlatTerm,
    Codec.Serialise.IO         as Data.Binary.Serialise.CBOR.IO,
    Codec.CBOR.Magic           as Data.Binary.Serialise.CBOR.Magic,
    Codec.CBOR.Pretty          as Data.Binary.Serialise.CBOR.Pretty,
    Codec.Serialise.Properties as Data.Binary.Serialise.CBOR.Properties,
    Codec.CBOR.Write           as Data.Binary.Serialise.CBOR.Write,
    Codec.CBOR.Term            as Data.Binary.Serialise.CBOR.Term,
    Codec.Serialise.Tutorial   as Data.Binary.Serialise.CBOR.Tutorial
  exposed-modules: Data.Binary.Serialise.CBOR.Read

  build-depends:
    base >= 4.8 && < 4.16,
    bytestring < 1.0,
    cborg     == 0.2.*,
    serialise == 0.2.*

