name:                cbor-tool
version:             0.2.2.0
synopsis:            A tool for manipulating CBOR.
description:         A tool for dumping and converting CBOR-encoded data.
homepage:            https://github.com/well-typed/cborg
license:             BSD3
license-file:        LICENSE.txt
author:              Duncan Coutts
maintainer:          duncan@community.haskell.org, ben@smart-cactus.org
copyright:           2015-2017 Duncan Coutts,
                     2015-2017 Well-Typed LLP,
                     2015 IRIS Connect Ltd
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
  GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC==8.8.1

executable cbor-tool
  main-is:             Main.hs
  other-extensions:    CPP, BangPatterns
  ghc-options:         -Wall
  build-depends:
    base >=4.7 && <5.0,
    filepath >=1.0 && <1.5,
    aeson >=0.7 && <1.5,
    aeson-pretty >=0.8 && <0.9,
    scientific >=0.3 && <0.4,
    bytestring >=0.10 && <0.11,
    unordered-containers >=0.2 && <0.3,
    text >=1.1 && <1.3,
    vector >=0.10 && <0.13,

    cborg      ==0.2.*,
    cborg-json ==0.2.*
  default-language:    Haskell2010
