name:                cbor-tool
version:             0.2.3.0
synopsis:            A tool for manipulating CBOR.
description:         A tool for dumping and converting CBOR-encoded data.
homepage:            https://github.com/well-typed/cborg
license:             BSD3
license-file:        LICENSE.txt
author:              Duncan Coutts
maintainer:          duncan@community.haskell.org, ben@smart-cactus.org
copyright:           2015-2017 Duncan Coutts,
                     2015-2017 Well-Typed LLP,
                     2015 IRIS Connect Ltd
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
  GHC == 8.4.4,
  GHC == 8.6.5,
  GHC == 8.8.3,
  GHC == 8.10.7,
  GHC == 9.0.1,
  GHC == 9.2.2,
  GHC == 9.4.2,
  GHC == 9.6.1

executable cbor-tool
  main-is:             Main.hs
  other-extensions:    CPP, BangPatterns
  ghc-options:         -Wall
  build-depends:
    base                 >=4.11 && <4.21,
    filepath             >=1.0  && <1.6,
    aeson                >=0.7  && <2.3,
    aeson-pretty         >=0.8  && <0.9,
    scientific           >=0.3  && <0.4,
    bytestring           >=0.10 && <0.13,
    unordered-containers >=0.2  && <0.3,
    text                 >=1.1  && <2.2,
    vector               >=0.10 && <0.14,

    cborg      ==0.2.*,
    cborg-json ==0.2.*
  default-language:    Haskell2010
