name:                cborg-json
version:             0.2.1.0
synopsis:            A library for encoding JSON as CBOR
description:         This package implements the bijection between JSON and
                     CBOR defined in the CBOR specification, RFC 7049.
homepage:            https://github.com/well-typed/cborg
license:             BSD3
license-file:        LICENSE.txt
author:              Duncan Coutts
maintainer:          ben@smart-cactus.org
bug-reports:         https://github.com/well-typed/cborg/issues
copyright:           2015-2017 Duncan Coutts,
                     2015-2017 Well-Typed LLP,
                     2015 IRIS Connect Ltd
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Codec.CBOR.JSON
  ghc-options:         -Wall
  build-depends:
    base >=4.7 && <4.13,
    aeson >=0.7 && <1.5,
    aeson-pretty >=0.8 && <0.9,
    unordered-containers >=0.2 && <0.3,
    scientific >=0.3 && <0.4,
    text >=1.1 && <1.3,
    vector >=0.10 && <0.13,
    cborg ==0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010

  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
