name:                cborg-json
version:             0.2.4.0
synopsis:            A library for encoding JSON as CBOR
description:         This package implements the bijection between JSON and
                     CBOR defined in the CBOR specification, RFC 7049.
homepage:            https://github.com/well-typed/cborg
license:             BSD3
license-file:        LICENSE.txt
author:              Duncan Coutts
maintainer:          ben@smart-cactus.org
bug-reports:         https://github.com/well-typed/cborg/issues
copyright:           2015-2017 Duncan Coutts,
                     2015-2017 Well-Typed LLP,
                     2015 IRIS Connect Ltd
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5,
  GHC == 8.8.3,
  GHC == 8.10.1,
  GHC == 9.0.1,
  GHC == 9.2.2

library
  exposed-modules:     Codec.CBOR.JSON
  ghc-options:         -Wall
  build-depends:
    base >=4.7 && < 4.17,
    aeson >=0.7 && <2.1,
    aeson-pretty >=0.8 && <0.9,
    unordered-containers >=0.2 && <0.3,
    scientific >=0.3 && <0.4,
    text >=1.1 && <2.1,
    vector >=0.10 && <0.13,
    cborg ==0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010

  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances



benchmark bench
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench
  main-is:           Main.hs

  default-language:  Haskell2010
  ghc-options:
    -Wall -rtsopts -fno-cse -fno-ignore-asserts -fno-warn-orphans -O2

  other-modules:

  build-depends:
    base                    >= 4.6     && < 4.17,
    cborg                                      ,
    cborg-json                                 ,
    aeson                                      ,
    bytestring              >= 0.10.4  && < 0.12,
    criterion               >= 1.0     && < 1.6,
    deepseq                 >= 1.0     && < 1.5,
    directory,
    process,
    zlib                    >= 0.5     && < 0.7
